# mini-torch

./: 1_mlp_poc.ipynb  2_resnet.ipynb  3_attention.ipynb  LICENSE  README.md  pyproject.toml
mini_torch/: __init__.py  functional.py  nn.py  optim.py  schedulers.py  tensor.py
